# yachtpit

./: .aiignore  .gitignore  Cargo.toml  ICONS_NEEDED.md  LICENSE  README.md  _BACKLOG.md  cleanup.sh  index.html  package-lock.json  package.json  test_bounding_box.js  test_browser_websocket.html  test_gps_map  test_gps_map.rs  test_integration.sh  test_websocket.js
.github/workflows/: ci.yml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
ais-test-map/: README.md  index.html  package-lock.json  package.json  tsconfig.json
ais-test-map/src/: App.tsx  ais-provider.tsx
crates/ais/: Cargo.toml  error.md
crates/ais/src/: ais.rs  main.rs
crates/base-map/: Cargo.toml  README.md  build.rs
crates/base-map/map/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vitest.config.ts
crates/base-map/map/src/: App.tsx  CustomGeolocate.ts  GeoMap.tsx  LayerSelector.tsx  MapNext.tsx  ais-provider.tsx  control-panel.tsx  main.tsx  real-ais-provider.tsx  types.ts  user-location-marker.tsx  vessel-marker.tsx
crates/base-map/map/src/components/map/: AisFeedInfo.tsx  GpsFeedInfo.tsx  Search.tsx  SearchResult.tsx
crates/base-map/map/src/theme/: neumorphic-theme.ts
crates/base-map/map/test/: real-ais-provider.test.tsx  test-setup.ts
crates/base-map/src/: app.rs  geolocate.rs  lib.rs  main.rs
crates/components/: Cargo.toml  README.md
crates/components/src/: ais_indicator.rs  cluster.rs  compass_gauge.rs  composition.rs  depth_gauge.rs  engine_status.rs  gps_indicator.rs  instrument_cluster.rs  lib.rs  navigation_display.rs  radar_indicator.rs  speed_gauge.rs  system_display.rs  theme.rs  ui.rs  vessel_data.rs  wind_display.rs  yacht_data.rs
crates/datalink/: Cargo.toml
crates/datalink-provider/: Cargo.toml
crates/datalink-provider/src/: lib.rs
crates/datalink-provider/src/ais/: mod.rs
crates/datalink-provider/src/gps/: mod.rs
crates/datalink-provider/src/gpyes/: mod.rs
crates/datalink-provider/src/radar/: mod.rs
crates/datalink/src/: lib.rs
crates/hardware/: Cargo.toml  README.md
crates/hardware/src/: bus.rs  device.rs  discovery_protocol.rs  error.rs  gps_device.rs  lib.rs
crates/models/: Cargo.toml
crates/models/src/: cluster.rs  lib.rs  yacht_systems.rs
crates/systems/: Cargo.toml  README.md
crates/systems/src/: geo_plugin.rs  instrument_theme.rs  instruments.rs  lib.rs  player.rs  systems.rs  yacht_systems.rs
crates/systems/src/ais/: ais_system.rs  mod.rs
crates/systems/src/gps/: gps_system.rs  mod.rs
crates/systems/src/marine/: vessel_systems.rs
crates/systems/src/radar/: mod.rs  radar_system.rs
crates/systems/src/vessel/: mod.rs  vessel_systems.rs
crates/systems/src/world/: player.rs
crates/yachtpit/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package.json
crates/yachtpit/assets/ui/gps-map/: index.html
crates/yachtpit/mobile/: Cargo.toml  Makefile
crates/yachtpit/mobile/mobile.xcodeproj/: project.pbxproj
crates/yachtpit/mobile/src/: lib.rs
crates/yachtpit/src/: lib.rs  main.rs
crates/yachtpit/src/core/: audio.rs  menu.rs  mod.rs  system_manager.rs
crates/yachtpit/src/core/actions/: mod.rs
crates/yachtpit/src/domain/: cluster.rs  mod.rs  player.rs  systems.rs  yacht_systems.rs
crates/yachtpit/src/services/: debug_service.rs  gps_service.rs  gpyes_provider.rs  mod.rs
crates/yachtpit/src/ui/: gps_map.rs  loading.rs  menu.rs  mod.rs
mobile/: Cargo.toml  manifest.yaml
src/: loading.rs  main.rs  player.rs
src/actions/: mod.rs
