[workspace]
members = ["crates/yachtpit", "crates/yachtpit/mobile", "crates/systems", "crates/components", "crates/datalink", "crates/datalink-provider"]
resolver = "2"

default-members = [
    "crates/yachtpit"
]

[workspace.dependencies]
bevy = { version = "0.16", default-features = false }
wasm-bindgen = "=0.2.100"
