[package]
name = "ais"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ais"
path = "src/main.rs"

[profile.dev]
debug = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
url = "2.4"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.22.1"
tokio-util = "0.7.15"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14.0"
mockito = "1.0"
serde_json = "1.0"