[package]
name = "datalink-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
datalink = { path = "../datalink" }
tokio = { version = "1.0", features = ["full"] }
tokio-serial = "5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
bytes = "1.0"
futures = "0.3"