[package]
name = "systems"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
] }
rand = { version = "0.8.3" }
